@@ -38,6 +38,7 @@ Allow the string argument to accept the entire path tail.
 #567778: Allow override of contact and user contact pages.
 Allow override of blog and user blog pages.
 Allow override of poll page.
+#596450 by Scott Reynolds: Provide an ajax command response to reset the modal to the 'loading' state.
 
 ctools 6.x-1.0
 ==============
